# GSLanguage

./: .gitignore  CMakeLists.txt  README.md  grammar.txt  gsrt.c  main.cpp  test.c  test.cpp  test.gs
include/AST/: AST.h  CMakeLists.txt  GS_ASTBuilder.h  GS_ASTContext.h  GS_Declaration.h  GS_Expression.h  GS_IncludeAll.h  GS_Node.h  GS_Pass.h  GS_Qualifiers.h  GS_Scope.h  GS_Statement.h  GS_Transformer.h  GS_TranslationUnit.h  GS_Type.h  GS_Visitor.h
include/AST/Declarations/: GS_FunctionDeclaration.h  GS_ImportDeclaration.h  GS_ModuleDeclaration.h  GS_TranslationUnitDeclaration.h  GS_VariableDeclaration.h
include/AST/Expressions/: GS_ArrayExpression.h  GS_BinaryExpression.h  GS_CastExpression.h  GS_ConstantExpression.h  GS_FunctionCallingExpression.h  GS_IndexExpression.h  GS_LiteralExpression.h  GS_RangeExpression.h  GS_TypeCastExpression.h  GS_UnaryExpression.h  GS_VariableUsingExpression.h
include/AST/Statements/: GS_AssignmentStatement.h  GS_DeclarationStatement.h  GS_ExpressionStatement.h  GS_ForStatement.h  GS_IfStatement.h  GS_MatchStatement.h  GS_ReturnStatement.h  GS_VariableDeclarationStatement.h  GS_WhileStatement.h
include/ArgumentsParser/: CMakeLists.txt  GS_Arguments.h
include/CodeGenerator/: CMakeLists.txt  CodeGenerator.h  GS_BCBuilder.h  GS_Backend.h  GS_CGBackend.h  GS_CGContext.h  GS_CGPass.h  GS_CodeGenVisitor.h  GS_CodeGenerationPass.h  GS_CodeGenerationVisitor.h  GS_CodeGenerationVisitorContext.h  GS_CodeGenerator.h  GS_CodeHolder.h  GS_CompilerUnit.h  GS_LLVMIncluding.h  GS_Opcode.h  GS_Section.h  GS_Toolchain.h  GS_TranslationModule.h  GS_VMImage.h  GS_VMImageEncoder.h  GS_VM_Nodes.h  GS_Variable.h  GS_VariablesTable.h
include/CodeGenerator/LLVM/: GS_LLVMBackend.h  GS_LLVMCGBackend.h  GS_LLVMCGContext.h  GS_LLVMCGPass.h  GS_LLVMCGVisitor.h  GS_LLVMCodeGenerationPass.h  GS_LLVMCodeGenerationVisitor.h  GS_LLVMCodeGenerationVisitorContext.h  GS_LLVMCodeHolder.h  GS_LLVMCompilerUnit.h  GS_LLVMTranslationModule.h  GS_LLVMVisitor.h
include/Compiler/CodeGenerator/: CMakeLists.txt  GS_CodeGenerator.h  GS_VariablesTable.h
include/Compiler/Lexer/: CMakeLists.txt  GS_Coordinate.h  GS_Keywords.h  GS_Lexer.h  GS_Position.h  GS_Regex.h  GS_Token.h  GS_Tokenizer.h
include/Compiler/Parser/: CMakeLists.txt  Expression.h  GS_Expression.h  GS_IncludeExpressions.h  GS_IncludeStatements.h  GS_IncludeValues.h  GS_Parser.h  GS_Statement.h  GS_TableOfSymbols.h  Statement.h
include/Compiler/Parser/Expressions/: GS_Expression.h  (+5 more)
include/Compiler/Reader/: CMakeLists.txt  GS_Reader.h
include/Compiler/Util/: CMakeLists.txt  GS_Arguments.h  GS_CrossPlatform.h  GS_PlatformDefines.h  GS_PlatformTypes.h
include/CrossPlatform/: CMakeLists.txt  GS_ClassUtilities.h  GS_CrossPlatform.h  GS_PlatformTypes.h
include/Debug/: CMakeLists.txt  Debug.h  GS_ASTDumper.h  GS_Debug.h  GS_Dumper.h  GS_TableOfSymbolsDumper.h  GS_Timer.h  GS_TimerBase.h  GS_TimerResults.h
include/Driver/: CMakeLists.txt  Driver.h  GS_Arguments.h  GS_CompilationUnit.h  GS_Compiler.h  GS_CompilerConfig.h  GS_CompilerSession.h  GS_CompilerSessionConfig.h  GS_CompilerSessionsManager.h  GS_CompilingContext.h  GS_Context.h  GS_GlobalContext.h  GS_Queries.def  GS_QueryManager.h  GS_Session.h  GS_SessionContext.h  GS_SessionManager.h  GS_SessionsManager.h  GS_Toolchains.h  GS_TranslationUnit.h  GS_TranslationUnitConfig.h  GS_TranslationUnitsManager.h
include/Exceptions/: CMakeLists.txt  GS_ArgumentException.h  GS_ArithmeticException.h  GS_CompilingException.h  GS_ErrorHandler.h  GS_Exception.h  GS_IException.h  GS_LexerException.h  GS_NewLineException.h  GS_NotFoundVariableException.h  GS_NotSupportedException.h  GS_ParserException.h  GS_ReaderException.h  GS_TypeCastException.h
include/IO/: CMakeLists.txt  GS_Error.h  GS_ErrorHandler.h  GS_IOContext.h  GS_Message.h  GS_MessageHandler.h  GS_Reader.h  GS_Source.h  GS_SourceManager.h  GS_Stream.h  GS_Symbol.h  GS_TextStream.h  GS_Writer.h  IO.h
include/Interpreter/: CMakeLists.txt  GS_Interpreter.h  GS_InterpreterVisitor.h  GS_TableOfSymbols.h
include/Lexer/: CMakeLists.txt  GS_CodeReader.h  GS_Coordinate.h  GS_Cursor.h  GS_InputTextAnalyzer.h  GS_Keywords.def  GS_Keywords.h  GS_Lexer.h  GS_Position.h  GS_Regex.h  GS_Token.h  GS_TokenStream.h  GS_TokenTypes.def  Lexer.h
include/Optimizer/: CMakeLists.txt  GS_ConstantFoldingPass.h  GS_Optimizer.h  GS_OptimizerPass.h  Optimizer.h
include/Optimizer/Passes/: GS_ConstantFoldingPass.h  OptimizingPasses.h  Passes.h
include/Parser/: CMakeLists.txt  GRAMMAR.md  GS_IncludeExpressions.h  GS_IncludeNodes.h  GS_IncludeStatements.h  GS_IncludeValues.h  GS_NewParser.h  GS_Parser.h  GS_TablesOfSymbols.h  Parser.h
include/Parser/Expressions/: GS_BinaryExpression.h  GS_Expression.h  GS_ExpressionTypes.h  GS_UnaryExpression.h  GS_VaLueExpression.h
include/Parser/Nodes/: GS_AssignmentNode.h  GS_BinaryNode.h  GS_BlockNode.h  GS_IntegerValue.h  GS_Node.h  GS_PrintNode.h  GS_RootNode.h  GS_StringValue.h  GS_UnaryNode.h  GS_Value.h  GS_ValueNode.h  GS_VariableDeclarationNode.h  GS_VariableNode.h  GS_VariableUsingNode.h  GS_Visitor.h
include/Parser/Statements/: GS_AssignmentStatement.h  GS_Statement.h  GS_StatementTypes.h  GS_VariableDeclarationStatement.h
include/Parser/Values/: GS_IntegerValue.h  GS_StringValue.h  GS_Value.h  LiteralTypes.h
include/Parser/Visitors/: GS_PrintVisitor.h  GS_Visitor.h
include/Reader/: CMakeLists.txt  GS_Code.h  GS_Reader.h  GS_ReaderRunner.h  GS_TextStream.h  Reader.h
include/Semantic/: CMakeLists.txt  GS_Semantic.h  GS_SemanticAnalyzer.h  GS_SemanticPass.h  GS_TableOfSymbols.h  GS_TableOfVariables.h  GS_Type.h  GS_TypeCheckerPass.h  GS_TypePlaceholderPass.h  GS_VariablesPlaceholderPass.h  Semantic.h
include/Semantic/Passes/: GS_SymbolsPlaceholderPass.h  GS_TypeInferencePass.h  GS_VariablesPlaceholderPass.h  Passes.h  SemanticPasses.h
include/Semantic/Visitors/: GS_VariablesPlaceholderVisitor.h
include/Starter/: CMakeLists.txt  GS_Context.h  GS_Runnable.h  GS_Starter.h
tests/: CMakeLists.txt  GS_IOTests.cpp  GS_LexerTests.cpp  GS_ParserTests.cpp  GS_ReaderTests.cpp
(+208 files in other folders)
